--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Anthony Perez - Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">AnthonyPerez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/AnthonyPerez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,23 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Anthony Perez 
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Student📚</div>
+        <p class="lead mb-4">My name is Anthony Perez and this is my website. I am currently a freshman attending the University Of California, Riverside, and am an undeclared major. When I was young I helped my father with his business that he ran. It regarded renting out chairs and tables to customers. This job was one that taught me a lot of things that I continued to use in my lifetime. I was very interested in this idea of business and plan to do something in my life focused around it. In high school, I was able to join a club and show off my skills as a leader because I worked hard to get my club money for a trip that we were going to. I was also able to showcase some Business skills in marketing when it came to promoting and selling. I was very capable of displaying what we were selling and getting consumers interested in buying it. Through High School, I continued to achieve great things being ranked 25 out of all my classes. I was also able to acquire multiple awards like a student of the month and other awards. <br><br>
 
-        Enter bio here<br><br>
+        Once I started college I had to acquire a job because I needed money for expenses. I started off applying to a job and didn’t get the job because there were already people who got the job because they applied first. I didn’t lose hope and stayed determined. I made sure to learn more about how I could get a job. I looked around every couple of days and stayed on top of it making sure that I could be hired. I learned about a new place opening up and knew that they would need workers so I found out where I could get an application.  I signed up and quickly realized that it’s not that simple after applying I had to go through a phone call interview. I was able to not make mistakes and did perfectly to get me into an in-person interview. This in-person interview was my very first so I already felt nervous. <br><br>
 
-        Enter bio here
+        I put away my fears to make sure it didn’t interfere with me getting the job because of nervousness. I made sure to get prepared and take everything I needed like paperwork. I also dressed professionally and made sure to arrive early so they can know that I am serious about getting the job. When it came to the in-person interview I was interviewed by two employers and was at a table with another person who wanted the job. It was something different I didn’t know I would be in an interview with another person at the same time.  I remained professional and respectful allowing the person to speak yet still made great responses to all the interview questions. Furthermore, in the end, they asked if we had any questions, and based on the job I was getting I asked questions. These questions related to the job but also related to the people I was asking. This showed how I am a friendly person who wanted to know more about them and the job. I soon got a call letting me know that I did get the job. I was able to use my knowledge in helping me acquire a job at The Barn, a dining service. I am someone who pushes myself to do better and overall a hard worker. I am someone who gets tasks done and continues to aspire to become someone successful in life. 
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="www.linkedin.com/in/anthony-perez-7b388813a">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/apere300">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:aperez.btech.19@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +89,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Student Poll Worker</h3>
+            <div class="subheading mb-3"><a target="_blank">The November 6th Elections</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • A clerk who inputted the ballots into the ballot machine <br> 
+              • Helped voters who had questions<br>
+              • Learned how to work with others and communicate with people<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">11/2018 - 11/2018 </span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Employee/Worker</h3>
+            <div class="subheading mb-3"><a target="_blank">Table and Chairs Rental</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Took tables/chairs to customer’s homes and charged them. <br>
+              • Learned how to think critically as well as social skills<br>
+              • Learned how to handle money<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">09/2014 -11/2018</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Translator at School</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.burtontech.org/">Alliance Judy Ivie Burton Technology High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Translated for teacher's during parent conference<br>
+            • Learned how to communicate and social skills<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">2016-2019</span>
           </div>
         </div>
 
@@ -151,34 +147,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Undergraduate Student</div>
+            <div>Undeclared Major</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
@@ -191,7 +165,13 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+          
+            <img src="img/PollWorker.jpg" width="500px">
+            <img src="img/Certificate.jpg" width="500px">
+            <br>
+            <img src="img/School.jpg" width="500px">
+            <img src="img/Chairsand Tables.jpg" width="500px">
+            
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Anthony Perez</center><br>
 
 
   </div>
